--- a/.sample.env
+++ b/.sample.env
@@ -5,7 +5,7 @@ MAIN_CHANNEL=-1001111
 LOG_CHANNEL=-1001111
 CLOUD_CHANNEL=-1001111
 REDIS_URI=
-REDIS_PASS=
+REDIS_PASSWORD=
 OWNER=1872074304
 
 # Optional Environment Variable
